💌 Corrects Shrimp vs Prawn mess